tests/diagnostics/catalog/snapshots/ir/IR0034.snap
error[IR0034]: IR_E_INVALID_FUNCTION
 --> tests/diagnostics/catalog/sources/ir/IR0034.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0034
  = help: keep IR validation diagnostics structured and catalog-backed
